[package]
name = "total-maps"
version = "0.2.0"
edition = "2021"
description = "Maps where every possible key has an associated value"
repository = "https://github.com/wleslie/total-maps"
license = "MIT"
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
num-traits = { version = "0.2.18", optional = true }

[dev-dependencies]
itertools = "0.12.1"

[profile.coverage]
inherits = "test"
